# AIMedia

back/: .env
back/ArticleManagePlus/: settings.py
pyside/: pyproject.toml
