[project]
name = "pyside"
version = "0.1.0"
description = "PySide6 GUI application for AI media management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11",
    "faiss-cpu>=1.9.0",
    "langchain>=0.3.9",
    "langchain-community>=0.3.9",
    "langchain-openai>=0.2.10",
    "lxml>=5.3.0",
    "markdown>=3.7",
    "nuitka>=2.5.4",
    "openai>=1.55",
    "patool>=1.12",
    "pillow>=11.0",
    "pydantic-settings>=2.6",
    "pyjwt>=2.8",
    "pyopenssl>=24.3",
    "pyperclip>=1.9",
    "pyside6>=6.8.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "qrcode>=8.0",
    "requests>=2.32",
    "selenium>=4.1",
    "sqlalchemy>=2.0",
    "tiktoken>=0.8",
    "webdriver-manager>=4.0",
    "zhipuai>=2.1.5.20250825",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]
